manifests/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermanagement
  labels:
    app: usermanagement
    environment: dev
spec:
  replicas: 1  # Lower replica count for dev
  selector:
    matchLabels:
      app: usermanagement
  template:
    metadata:
      labels:
        app: usermanagement
        environment: dev
    spec:
      imagePullSecrets:
      - name: my-ecr-secret
      containers:
      - name: usermanagement
        # The image tag here is updated automatically by the CI/CD pipeline.
        image: 188557556629.dkr.ecr.us-west-2.amazonaws.com/usermanagement:5f7ffe3e53004606365ab892af11b20ed31c964a
        ports:
        - containerPort: 5000
