manifests/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermanagement
  labels:
    app: usermanagement
    environment: dev
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: usermanagement
